deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata: 
  labels: 
    app: saraagentfrontend
  name: saraagentfrontend
  namespace: frontend
spec: 
  replicas: 2
  selector: 
    matchLabels: 
      app: saraagentfrontend
  template: 
    metadata: 
      labels: 
        app: saraagentfrontend
    spec: 
      containers: 
        - 
          image: "10.0.103.100:5000/saraagentfrontend:latest"
          name: saraagentfrontend
          ports: 
            - 
              containerPort: 3000
      imagePullSecrets: 
        - 
          name: regcred
