service.yml
---
apiVersion: v1
kind: Service
metadata: 
  name: saraagentfrontend
  namespace: frontend
spec: 
  ports: 
    - 
      name: http
      port: 3000
      protocol: TCP
      targetPort: 7003
  selector: 
    app: saraagentfrontend
  type: ClusterIP
  #Test Comment for Auto Trigger
